fix footer on mobile

--- a/assets/sass/footer.scss
+++ b/assets/sass/footer.scss
@@ -20,7 +20,7 @@
     // font-size: 0.5rem;
     background-image: url(/images/landing-graphics/separator.svg);
     background-repeat: no-repeat;
-    background-position: left bottom;
+    background-position: center bottom;
     padding-bottom: 12px;
   }
 }
